--- a/network.koesling.shm-modbus.yml
+++ b/network.koesling.shm-modbus.yml
@@ -24,104 +24,81 @@ modules:
 
   - name: Modbus_TCP_client_shm
     buildsystem: simple
-    build-commands:
-      # build
-      - mkdir build
-      - cmake -B build . -DCMAKE_BUILD_TYPE=Release -DCLANG_FORMAT=OFF -DCOMPILER_WARNINGS=OFF
-      - cmake --build build
-
-      # install
-      - install -D -m 755 build/modbus-tcp-client-shm ${FLATPAK_DEST}/bin/modbus-tcp-client-shm
+    buildsystem: cmake-ninja
+    config-opts:
+      - -DCMAKE_BUILD_TYPE=Release
+      - -DCLANG_FORMAT=OFF
+      - -DCOMPILER_WARNINGS=OFF
 
     sources:
       - type: git
-        tag: v1.1.1
-        commit: ef7aa067fce9af43cf9751440be852b8766e0a6d 
+        tag: v1.2.1
+        commit: 87c04ecc35eedb8fb67266ec60a55854c70db11e 
         url: https://github.com/NikolasK-source/modbus_tcp_client_shm.git
 
   - name: Modbus_RTU_client_shm
-    buildsystem: simple
-    build-commands:
-      # build
-      - mkdir build
-      - cmake -B build . -DCMAKE_BUILD_TYPE=Release -DCLANG_FORMAT=OFF -DCOMPILER_WARNINGS=OFF
-      - cmake --build build
-
-      # install
-      - install -D -m 755 build/modbus-rtu-client-shm ${FLATPAK_DEST}/bin/modbus-rtu-client-shm
+    buildsystem: cmake-ninja
+    config-opts:
+      - -DCMAKE_BUILD_TYPE=Release
+      - -DCLANG_FORMAT=OFF
+      - -DCOMPILER_WARNINGS=OFF
 
     sources:
       - type: git
-        tag: v0.2.0
-        commit: 5aa84184b9dbbb4d644686126b6d03b5f70bbb0c 
+        tag: v0.2.1
+        commit: 1c1715c9667454338c4af4b98a4245ddf5a241f6 
         url: https://github.com/NikolasK-source/modbus_rtu_client_shm.git
 
   - name: write_shm
-    buildsystem: simple
-    build-commands:
-      # build
-      - mkdir build
-      - cmake -B build . -DCMAKE_BUILD_TYPE=Release -DCLANG_FORMAT=OFF -DCOMPILER_WARNINGS=OFF
-      - cmake --build build
-
-      # install
-      - install -D -m 755 build/write_shm ${FLATPAK_DEST}/bin/write-shm
+    buildsystem: cmake-ninja
+    config-opts:
+      - -DCMAKE_BUILD_TYPE=Release
+      - -DCLANG_FORMAT=OFF
+      - -DCOMPILER_WARNINGS=OFF
 
     sources:
       - type: git
-        tag: v0.1.2
-        commit: 89a0647f349b1c87d30e7ea1cb51e87f649a2531 
+        tag: v0.1.3
+        commit: bc58b820a79fd00a699835acbfb23f8870c7a528 
         url: https://github.com/NikolasK-source/write_shm.git
 
   - name: SHM_random
-    buildsystem: simple
-    build-commands:
-      # build
-      - mkdir build
-      - cmake -B build . -DCMAKE_BUILD_TYPE=Release -DCLANG_FORMAT=OFF -DCOMPILER_WARNINGS=OFF
-      - cmake --build build
-
-      # install
-      - install -D -m 755 build/SHM_Random ${FLATPAK_DEST}/bin/shared-mem-random
+    buildsystem: cmake-ninja
+    config-opts:
+      - -DCMAKE_BUILD_TYPE=Release
+      - -DCLANG_FORMAT=OFF
+      - -DCOMPILER_WARNINGS=OFF
 
     sources:
       - type: git
-        tag: v1.0.3
-        commit: 4d830df46308ef045d96b75898f1cd4360681c8a 
+        tag: v1.0.5
+        commit: 95c72b58cc2fc73447c7abae07622af1219b7f08 
         url: https://github.com/NikolasK-source/shared_mem_random.git
 
   - name: dump_shm
-    buildsystem: simple
-    build-commands:
-      # build
-      - mkdir build
-      - cmake -B build . -DCMAKE_BUILD_TYPE=Release -DCLANG_FORMAT=OFF -DCOMPILER_WARNINGS=OFF
-      - cmake --build build
-
-      # install
-      - install -D -m 755 build/dump_shm ${FLATPAK_DEST}/bin/dump-shm
+    buildsystem: cmake-ninja
+    config-opts:
+      - -DCMAKE_BUILD_TYPE=Release
+      - -DCLANG_FORMAT=OFF
+      - -DCOMPILER_WARNINGS=OFF
 
     sources:
       - type: git
-        tag: v1.0.1
-        commit: b26d583cd7847a5325bae692af9bbc7d28e253fa 
+        tag: v1.0.2
+        commit: b39922ac9dbb3b37a73ffc0eed3c56582d0c50e9 
         url: https://github.com/NikolasK-source/dump_shm.git
 
   - name: stdin-to-modbus-shm
-    buildsystem: simple
-    build-commands:
-      # build
-      - mkdir build
-      - cmake -B build . -DCMAKE_BUILD_TYPE=Release -DCLANG_FORMAT=OFF -DCOMPILER_WARNINGS=OFF
-      - cmake --build build
-
-      # install
-      - install -D -m 755 build/stdin_to_modbus_shm ${FLATPAK_DEST}/bin/stdin-to-modbus-shm
+    buildsystem: cmake-ninja
+    config-opts:
+      - -DCMAKE_BUILD_TYPE=Release
+      - -DCLANG_FORMAT=OFF
+      - -DCOMPILER_WARNINGS=OFF
 
     sources:
       - type: git
-        tag: v1.0.3
-        commit: ae248283ad0bf13a46773b4dff602a463620e27e 
+        tag: v1.0.5
+        commit: a50c5f784286c31477ac3e9020e7f37dbe4f09ac 
         url: https://github.com/NikolasK-source/stdin_to_modbus_shm.git
 
 
