--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,6 +1,6 @@
 name: shm-modbus # you probably want to 'snapcraft register <name>'
 base: core22 # the base snap is the execution environment for this snap
-version: '1.0.3' # just for humans, typically '1.2+git' or '1.3.2'
+version: '1.0.4' # just for humans, typically '1.2+git' or '1.3.2'
 summary: A collection of applications to simulate a Modbus client  # 79 char long summary
 description: |
   Contains command line tools to simulate a Modbus TCP/RTU client.
@@ -8,7 +8,7 @@ description: |
   inspected and manipulated with tool contained in this snap
 
 grade: stable # must be 'stable' to release into candidate/stable channels
-confinement: strict # use 'strict' once you have the right plugs and slots
+confinement: classic # use 'strict' once you have the right plugs and slots
 
 build-packages:
   - autoconf
@@ -93,7 +93,7 @@ parts:
   stdin-to-modbus-shm:
     source: https://github.com/NikolasK-source/stdin_to_modbus_shm.git
     source-type: git
-    source-tag: v1.1.1
+    source-tag: v1.1.3
     plugin: cmake
     cmake-generator: Ninja
     cmake-parameters:
