--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,6 +1,6 @@
 name: shm-modbus # you probably want to 'snapcraft register <name>'
 base: core22 # the base snap is the execution environment for this snap
-version: '1.0.4' # just for humans, typically '1.2+git' or '1.3.2'
+version: '1.1.0' # just for humans, typically '1.2+git' or '1.3.2'
 summary: A collection of applications to simulate a Modbus client  # 79 char long summary
 description: |
   Contains command line tools to simulate a Modbus TCP/RTU client.
@@ -8,7 +8,7 @@ description: |
   inspected and manipulated with tool contained in this snap
 
 grade: stable # must be 'stable' to release into candidate/stable channels
-confinement: classic # use 'strict' once you have the right plugs and slots
+confinement: strict # use 'strict' once you have the right plugs and slots
 
 build-packages:
   - autoconf
@@ -51,7 +51,9 @@ apps:
   modbus-rtu-client-shm:
     command: usr/bin/modbus-rtu-client-shm
     plugs: [shmem-plug]
-    slots: [shmem-slot] 
+    slots: [shmem-slot]
+  signal-gen:
+    command: bin/signalgen
 
 parts:
   dump-shm:
@@ -125,3 +127,10 @@ parts:
       - -DCLANG_FORMAT=OFF
       - -DCOMPILER_WARNINGS=OFF
       - -DCMAKE_INSTALL_PREFIX=/usr
+
+  signal-gen:
+    source: https://github.com/NikolasK-source/shm-modbus-signal-gen.git
+    source-type: git
+    source-tag: v1.0.0
+    plugin: python
+    
