--- a/network.koesling.shm-modbus.yml
+++ b/network.koesling.shm-modbus.yml
@@ -111,6 +111,23 @@ modules:
         commit: 150198ef75c0fa066eb1e312c29a60744433081d 
         url: https://github.com/NikolasK-source/stdin_to_modbus_shm.git
 
+  - name: wago-modbus-coupler-shm
+    buildsystem: cmake-ninja
+    config-opts:
+      - -DCMAKE_BUILD_TYPE=Release
+      - -DCLANG_FORMAT=OFF
+      - -DCOMPILER_WARNINGS=OFF
+      - -DBUILD_DOC=OFF
+
+    post-install:
+      - mv ${FLATPAK_DEST}/bin/wago_modbus_coupler_shm ${FLATPAK_DEST}/bin/wago-modbus-coupler-shm
+
+    sources:
+      - type: git
+        tag: v1.1.1
+        commit: 6bed8de3342132d191171be9af2208fe388dbde7 
+        url: https://github.com/NikolasK-source/wago_modbus_coupler_shm.git
+
 
   - name: metadata
     buildsystem: simple
