--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,6 +1,6 @@
 name: shm-modbus # you probably want to 'snapcraft register <name>'
 base: core22 # the base snap is the execution environment for this snap
-version: '1.1.2' # just for humans, typically '1.2+git' or '1.3.2'
+version: '1.2.0' # just for humans, typically '1.2+git' or '1.3.2'
 summary: A collection of applications to simulate a Modbus client  # 79 char long summary
 description: |
   Contains command line tools to simulate a Modbus TCP/RTU client.
@@ -54,6 +54,10 @@ apps:
     slots: [shmem-slot]
   signal-gen:
     command: bin/signalgen
+  wago-modbus-coupler-shm:
+    command: usr/bin/wago_modbus_coupler_shm
+    plugs: [shmem-plug]
+    slots: [shmem-slot]
 
 parts:
   dump-shm:
@@ -134,3 +138,15 @@ parts:
     source-tag: v1.0.2
     plugin: python
     
+  wago-modbus-coupler-shm:
+    source: https://github.com/NikolasK-source/wago_modbus_coupler_shm.git
+    source-type: git
+    source-tag: v1.1.1
+    plugin: cmake
+    cmake-generator: Ninja
+    cmake-parameters:
+      - -DCMAKE_BUILD_TYPE=Release
+      - -DCLANG_FORMAT=OFF
+      - -DCOMPILER_WARNINGS=OFF
+      - -DCMAKE_INSTALL_PREFIX=/usr
+      
