--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,6 +1,6 @@
 name: shm-modbus # you probably want to 'snapcraft register <name>'
 base: core22 # the base snap is the execution environment for this snap
-version: '1.3.0' # just for humans, typically '1.2+git' or '1.3.2'
+version: '1.3.0-1' # just for humans, typically '1.2+git' or '1.3.2'
 summary: A collection of applications to simulate a Modbus client  # 79 char long summary
 description: |
   Contains command line tools to simulate a Modbus TCP/RTU client.
@@ -8,24 +8,13 @@ description: |
   inspected and manipulated with tool contained in this snap
 
 grade: stable # must be 'stable' to release into candidate/stable channels
-confinement: strict # use 'strict' once you have the right plugs and slots
+confinement: classic # use 'strict' once you have the right plugs and slots
 
 build-packages:
   - autoconf
   - automake
   - libtool
   - libreadline-dev
-
-slots:
-  shmem-slot:
-    interface: shared-memory
-    write: ['*'] # paths are relative to /dev/shm
-    private: false 
-plugs:
-  shmem-plug:
-    interface: shared-memory
-    shared-memory: shmem-slot
-    private: false
 
 apps:
   dump-shm:
