run gui with .desktop file

--- a/network.koesling.shm-modbus.desktop
+++ b/network.koesling.shm-modbus.desktop
@@ -4,7 +4,6 @@ GenericName=Modbus Client
 Categories=Development
 Comment=Collection of applications to simulate a Modbus client
 Icon=network.koesling.shm-modbus
-Exec=shm-modbus --guided
+Exec=shm-modbus --gui
 Keywords=shm;shared-memory;modbus;client
-Terminal=true
 Type=Application
