update flatpak manifest

--- a/network.koesling.shm-modbus.yml
+++ b/network.koesling.shm-modbus.yml
@@ -10,6 +10,73 @@ finish-args:
   - --socket=fallback-x11
   - --socket=wayland
 modules:
+  - name: cxxopts
+    buildsystem: cmake-ninja
+    config-opts:
+      - -DCMAKE_BUILD_TYPE=Release
+      - -DCXXOPTS_BUILD_EXAMPLES=OFF
+      - -DCXXOPTS_BUILD_TESTS=OFF
+    sources:
+      - type: git
+        tag: v3.2.0
+        url: https://github.com/jarro2783/cxxopts.git
+
+  - name: cxxshm
+    buildsystem: cmake-ninja
+    config-opts:
+      - -DCMAKE_BUILD_TYPE=Release
+      - -DCLANG_FORMAT=OFF
+      - -DCOMPILER_WARNINGS=OFF
+      - -DCLANG_TIDY=OFF
+      - -DBUILD_DOC=OFF
+      - -DENABLE_TEST=OFF
+    sources:
+      - type: git
+        tag: v2.0.2
+        url: https://github.com/NikolasK-source/cxxshm.git
+
+  - name: cxxsemaphore
+    buildsystem: cmake-ninja
+    config-opts:
+      - -DCMAKE_BUILD_TYPE=Release
+      - -DCLANG_FORMAT=OFF
+      - -DCOMPILER_WARNINGS=OFF
+      - -DCLANG_TIDY=OFF
+      - -DBUILD_DOC=OFF
+      - -DENABLE_TEST=OFF
+    sources:
+      - type: git
+        tag: v2.0.2
+        url: https://github.com/NikolasK-source/cxxsemaphore.git
+
+  - name: cxxitimer
+    buildsystem: cmake-ninja
+    config-opts:
+      - -DCMAKE_BUILD_TYPE=Release
+      - -DCLANG_FORMAT=OFF
+      - -DCOMPILER_WARNINGS=OFF
+      - -DCLANG_TIDY=OFF
+      - -DBUILD_DOC=OFF
+      - -DENABLE_TEST=OFF
+    sources:
+      - type: git
+        tag: v2.0.2
+        url: https://github.com/NikolasK-source/cxxitimer.git
+
+  - name: nlohmann_json
+    buildsystem: cmake-ninja
+    sources:
+      - type: git
+        tag: v3.11.3
+        url: https://github.com/nlohmann/json.git
+
+  - name: libmodbus
+    buildsystem: autotools
+    sources:
+      - type: git
+        tag: v3.1.10
+        url: https://github.com/stephane/libmodbus.git
+
   - name: python3-PySide6
     buildsystem: simple
     build-commands:
@@ -33,16 +100,10 @@ modules:
     buildsystem: simple
     build-commands:
       - install -D -m 755 shm-modbus ${FLATPAK_DEST}/bin/shm-modbus
-      - install -D -m 644 guided-commands.sh ${FLATPAK_DEST}/bin/guided-commands.sh
-      - install -D -m 644 manual-commands.sh ${FLATPAK_DEST}/bin/manual-commands.sh
 
     sources:
       - type: file
         path: shm-modbus
-      - type: file
-        path: guided-commands.sh
-      - type: file
-        path: manual-commands.sh
 
   - name: Modbus_TCP_client_shm
     buildsystem: cmake-ninja
@@ -50,11 +111,12 @@ modules:
       - -DCMAKE_BUILD_TYPE=Release
       - -DCLANG_FORMAT=OFF
       - -DCOMPILER_WARNINGS=OFF
+      - -DCLANG_TIDY=OFF
+      - -DENABLE_TEST=OFF
 
     sources:
       - type: git
-        tag: v1.5.3
-        commit: 9b336c61c130138bf43f18fc089322254ed09526
+        tag: v1.6.3
         url: https://github.com/NikolasK-source/modbus_tcp_client_shm.git
 
   - name: signal_gen
@@ -62,6 +124,7 @@ modules:
     build-commands:
       - pip3 install --prefix=/app --no-deps .
       - mv /app/bin/signalgen /app/bin/signal-gen
+      - ln -s /app/bin/signal-gen /app/bin/shm-modbus-signal-gen
     sources:
       - type: git
         tag: v1.0.2
@@ -72,15 +135,9 @@ modules:
     buildsystem: simple
     build-commands:
       - pip3 install --prefix=/app --no-deps .
-      #- mkdir -p /app/share/shm-modbus-gui/py_ui
-      #- install -Dm555 src/*.py /app/share/shm-modbus-gui
-      #- chmod +x /app/share/shm-modbus-gui/main.py
-      #- install -Dm555 src/py_ui/*.py /app/share/shm-modbus-gui/py_ui
-      #- ln -s ../share/shm-modbus-gui/main.py /app/bin/shm-modbus-gui
     sources:
       - type: git
-        tag: v1.0.2
-        commit: c2211cae8dde627e592d94483c29827307b08b3d
+        tag: v2.1.0
         url: https://github.com/NikolasK-source/shm_modbus_gui.git
 
   - name: Modbus_RTU_client_shm
@@ -89,11 +146,12 @@ modules:
       - -DCMAKE_BUILD_TYPE=Release
       - -DCLANG_FORMAT=OFF
       - -DCOMPILER_WARNINGS=OFF
+      - -DCLANG_TIDY=OFF
+      - -DENABLE_TEST=OFF
 
     sources:
       - type: git
-        tag: v0.3.0
-        commit: 2e42384a3e4b14c2873765f178786ff52b07a078
+        tag: v0.4.1
         url: https://github.com/NikolasK-source/modbus_rtu_client_shm.git
 
   - name: write_shm
@@ -102,12 +160,27 @@ modules:
       - -DCMAKE_BUILD_TYPE=Release
       - -DCLANG_FORMAT=OFF
       - -DCOMPILER_WARNINGS=OFF
+      - -DCLANG_TIDY=OFF
+      - -DENABLE_TEST=OFF
 
     sources:
       - type: git
-        tag: v1.0.0
-        commit: e11facb8ea556272b3d25d47e028f274f5bb4894 
+        tag: v1.1.1
         url: https://github.com/NikolasK-source/write_shm.git
+
+  - name: shm_format
+    buildsystem: cmake-ninja
+    config-opts:
+      - -DCMAKE_BUILD_TYPE=Release
+      - -DCLANG_FORMAT=OFF
+      - -DCOMPILER_WARNINGS=OFF
+      - -DCLANG_TIDY=OFF
+      - -DENABLE_TEST=OFF
+
+    sources:
+      - type: git
+        tag: v2.0.1
+        url: https://github.com/NikolasK-source/shm_format.git
 
   - name: SHM_random
     buildsystem: cmake-ninja
@@ -115,11 +188,12 @@ modules:
       - -DCMAKE_BUILD_TYPE=Release
       - -DCLANG_FORMAT=OFF
       - -DCOMPILER_WARNINGS=OFF
+      - -DCLANG_TIDY=OFF
+      - -DENABLE_TEST=OFF
 
     sources:
       - type: git
-        tag: v1.2.0
-        commit: 0edd6983134d6675e1fd4efbd7f24b8fd44e8d9d 
+        tag: v1.4.0
         url: https://github.com/NikolasK-source/shared_mem_random.git
 
   - name: dump_shm
@@ -128,11 +202,12 @@ modules:
       - -DCMAKE_BUILD_TYPE=Release
       - -DCLANG_FORMAT=OFF
       - -DCOMPILER_WARNINGS=OFF
+      - -DCLANG_TIDY=OFF
+      - -DENABLE_TEST=OFF
 
     sources:
       - type: git
-        tag: v1.2.0
-        commit: 3611fdd25c4b7f611dffad017cd98c76b55d69a4 
+        tag: v1.3.1
         url: https://github.com/NikolasK-source/dump_shm.git
 
   - name: stdin-to-modbus-shm
@@ -141,11 +216,12 @@ modules:
       - -DCMAKE_BUILD_TYPE=Release
       - -DCLANG_FORMAT=OFF
       - -DCOMPILER_WARNINGS=OFF
+      - -DCLANG_TIDY=OFF
+      - -DENABLE_TEST=OFF
 
     sources:
       - type: git
-        tag: v1.2.0
-        commit: bde5f925590ad423584febfc7cb3daa27d46081f 
+        tag: v1.5.0
         url: https://github.com/NikolasK-source/stdin_to_modbus_shm.git
 
   - name: wago-modbus-coupler-shm
@@ -162,7 +238,6 @@ modules:
     sources:
       - type: git
         tag: v1.1.1
-        commit: 6bed8de3342132d191171be9af2208fe388dbde7 
         url: https://github.com/NikolasK-source/wago_modbus_coupler_shm.git
 
 
