--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,6 +1,6 @@
 name: shm-modbus # you probably want to 'snapcraft register <name>'
 base: core22 # the base snap is the execution environment for this snap
-version: '2.0.0-1' # just for humans, typically '1.2+git' or '1.3.2'
+version: '2.1.0-1' # just for humans, typically '1.2+git' or '1.3.2'
 summary: A collection of applications to simulate a Modbus client  # 79 char long summary
 description: |
   Contains command line tools to simulate a Modbus TCP/RTU client.
@@ -15,6 +15,7 @@ build-packages:
   - automake
   - libtool
   - libreadline-dev
+  - libmodbus-dev
 
 plugs:
   shm:
@@ -46,6 +47,9 @@ apps:
   wago-modbus-coupler-shm:
     command: usr/bin/wago_modbus_coupler_shm
     plugs: [shm]
+  shm-format:
+    command: usr/bin/shm-format
+    plugs: [shm]
   gui:
     command: bin/shm-modbus-gui
     plugs: 
@@ -60,10 +64,81 @@ apps:
       QT_PLUGIN_PATH: "$SNAP/usr/lib/$CRAFT_ARCH_TRIPLET/qt6/plugins"
 
 parts:
-  dump-shm:
-    source: https://github.com/NikolasK-source/dump_shm.git
+  cxxshm:
+    source: https://github.com/NikolasK-source/cxxshm.git
     source-type: git
-    source-tag: v1.2.0
+    source-tag: v2.0.2
+    plugin: cmake
+    cmake-generator: Ninja
+    cmake-parameters:
+      - -DCMAKE_BUILD_TYPE=Release
+      - -DCLANG_FORMAT=OFF
+      - -DCOMPILER_WARNINGS=OFF
+      - -DCLANG_TIDY=OFF
+      - -DBUILD_DOC=OFF
+      - -DENABLE_TEST=OFF
+      - -DCMAKE_INSTALL_PREFIX=/usr
+
+  cxxopts:
+    source: https://github.com/jarro2783/cxxopts.git
+    source-type: git
+    source-tag: v3.2.0
+    plugin: cmake
+    cmake-generator: Ninja
+    cmake-parameters:
+      - -DCMAKE_BUILD_TYPE=Release
+      - -DCXXOPTS_BUILD_EXAMPLES=OFF
+      - -DCXXOPTS_BUILD_TESTS=OFF
+      - -DCMAKE_INSTALL_PREFIX=/usr
+
+  cxxsemaphore:
+    source: https://github.com/NikolasK-source/cxxsemaphore.git
+    source-type: git
+    source-tag: v2.0.2
+    plugin: cmake
+    cmake-generator: Ninja
+    cmake-parameters:
+      - -DCMAKE_BUILD_TYPE=Release
+      - -DCLANG_FORMAT=OFF
+      - -DCOMPILER_WARNINGS=OFF
+      - -DCLANG_TIDY=OFF
+      - -DBUILD_DOC=OFF
+      - -DENABLE_TEST=OFF
+      - -DCMAKE_INSTALL_PREFIX=/usr
+
+  cxxitimer:
+    source: https://github.com/NikolasK-source/cxxitimer.git
+    source-type: git
+    source-tag: v2.0.2
+    plugin: cmake
+    cmake-generator: Ninja
+    cmake-parameters:
+      - -DCMAKE_BUILD_TYPE=Release
+      - -DCLANG_FORMAT=OFF
+      - -DCOMPILER_WARNINGS=OFF
+      - -DCLANG_TIDY=OFF
+      - -DBUILD_DOC=OFF
+      - -DENABLE_TEST=OFF
+      - -DCMAKE_INSTALL_PREFIX=/usr
+
+  nlohmann_json:
+    source: https://github.com/nlohmann/json.git
+    source-type: git
+    source-tag: v3.11.3
+    plugin: cmake
+    cmake-generator: Ninja
+    cmake-parameters:
+      - -DCMAKE_INSTALL_PREFIX=/usr
+
+  dump-shm:
+    source: https://github.com/SHMModbus/dump_shm.git
+    source-type: git
+    source-tag: v1.3.1
+    after:
+      - cxxshm
+      - cxxsemaphore
+      - nlohmann_json
+      - cxxopts
     plugin: cmake
     cmake-generator: Ninja
     cmake-parameters:
@@ -71,15 +146,25 @@ parts:
       - -DCLANG_FORMAT=OFF
       - -DCOMPILER_WARNINGS=OFF
       - -DCMAKE_INSTALL_PREFIX=/usr
+      - -Dcxxshm_DIR=/root/parts/cxxshm/install/usr/lib/x86_64-linux-gnu/cmake/cxxshm/
+      - -Dcxxitimer_DIR=/root/parts/cxxitimer/install/usr/lib/x86_64-linux-gnu/cmake/cxxitimer/
+      - -Dcxxsemaphore_DIR=/root/parts/cxxsemaphore/install/usr/lib/x86_64-linux-gnu/cmake/cxxsemaphore/
+      - -Dcxxopts_DIR=/root/parts/cxxopts/install/usr/lib/cmake/cxxopts/
+      - -Dnlohmann_json_DIR=/root/parts/nlohmann_json/install/usr/share/cmake/nlohmann_json/
     build-attributes:
       - enable-patchelf
     stage:
       - usr/bin/dump-shm
 
   write-shm:
-    source: https://github.com/NikolasK-source/write_shm.git
+    source: https://github.com/SHMModbus/write_shm.git
     source-type: git
-    source-tag: v1.0.0
+    source-tag: v1.1.1
+    after:
+      - cxxshm
+      - cxxsemaphore
+      - nlohmann_json
+      - cxxopts
     plugin: cmake
     cmake-generator: Ninja
     cmake-parameters:
@@ -87,15 +172,26 @@ parts:
       - -DCLANG_FORMAT=OFF
       - -DCOMPILER_WARNINGS=OFF
       - -DCMAKE_INSTALL_PREFIX=/usr
+      - -Dcxxshm_DIR=/root/parts/cxxshm/install/usr/lib/x86_64-linux-gnu/cmake/cxxshm/
+      - -Dcxxitimer_DIR=/root/parts/cxxitimer/install/usr/lib/x86_64-linux-gnu/cmake/cxxitimer/
+      - -Dcxxsemaphore_DIR=/root/parts/cxxsemaphore/install/usr/lib/x86_64-linux-gnu/cmake/cxxsemaphore/
+      - -Dcxxopts_DIR=/root/parts/cxxopts/install/usr/lib/cmake/cxxopts/
+      - -Dnlohmann_json_DIR=/root/parts/nlohmann_json/install/usr/share/cmake/nlohmann_json/
     build-attributes:
       - enable-patchelf
     stage:
       - usr/bin/write-shm
   
   shared-mem-random:
-    source: https://github.com/NikolasK-source/shared_mem_random.git
+    source: https://github.com/SHMModbus/shared_mem_random.git
     source-type: git
-    source-tag: v1.2.0
+    source-tag: v1.4.0
+    after:
+      - cxxshm
+      - cxxsemaphore
+      - cxxitimer
+      - nlohmann_json
+      - cxxopts
     plugin: cmake
     cmake-generator: Ninja
     cmake-parameters:
@@ -103,15 +199,26 @@ parts:
       - -DCLANG_FORMAT=OFF
       - -DCOMPILER_WARNINGS=OFF
       - -DCMAKE_INSTALL_PREFIX=/usr
+      - -Dcxxshm_DIR=/root/parts/cxxshm/install/usr/lib/x86_64-linux-gnu/cmake/cxxshm/
+      - -Dcxxitimer_DIR=/root/parts/cxxitimer/install/usr/lib/x86_64-linux-gnu/cmake/cxxitimer/
+      - -Dcxxsemaphore_DIR=/root/parts/cxxsemaphore/install/usr/lib/x86_64-linux-gnu/cmake/cxxsemaphore/
+      - -Dcxxopts_DIR=/root/parts/cxxopts/install/usr/lib/cmake/cxxopts/
+      - -Dnlohmann_json_DIR=/root/parts/nlohmann_json/install/usr/share/cmake/nlohmann_json/
     build-attributes:
       - enable-patchelf
     stage:
       - usr/bin/shared-mem-random
 
-  stdin-to-modbus-shm:
-    source: https://github.com/NikolasK-source/stdin_to_modbus_shm.git
+  shm-format:
+    source: https://github.com/SHMModbus/shm_format
     source-type: git
-    source-tag: v1.2.0
+    source-tag: v2.0.1
+    after:
+      - cxxshm
+      - cxxsemaphore
+      - cxxitimer
+      - nlohmann_json
+      - cxxopts
     plugin: cmake
     cmake-generator: Ninja
     cmake-parameters:
@@ -119,15 +226,46 @@ parts:
       - -DCLANG_FORMAT=OFF
       - -DCOMPILER_WARNINGS=OFF
       - -DCMAKE_INSTALL_PREFIX=/usr
+      - -Dcxxshm_DIR=/root/parts/cxxshm/install/usr/lib/x86_64-linux-gnu/cmake/cxxshm/
+      - -Dcxxitimer_DIR=/root/parts/cxxitimer/install/usr/lib/x86_64-linux-gnu/cmake/cxxitimer/
+      - -Dcxxsemaphore_DIR=/root/parts/cxxsemaphore/install/usr/lib/x86_64-linux-gnu/cmake/cxxsemaphore/
+      - -Dcxxopts_DIR=/root/parts/cxxopts/install/usr/lib/cmake/cxxopts/
+      - -Dnlohmann_json_DIR=/root/parts/nlohmann_json/install/usr/share/cmake/nlohmann_json/
+    build-attributes:
+      - enable-patchelf
+    stage:
+      - usr/bin/shm-format
+
+  stdin-to-modbus-shm:
+    source: https://github.com/SHMModbus/stdin_to_modbus_shm.git
+    source-type: git
+    source-tag: v1.5.0
+    plugin: cmake
+    cmake-generator: Ninja
+    cmake-parameters:
+      - -DCMAKE_BUILD_TYPE=Release
+      - -DCLANG_FORMAT=OFF
+      - -DCOMPILER_WARNINGS=OFF
+      - -DCMAKE_INSTALL_PREFIX=/usr
+      - -Dcxxshm_DIR=/root/parts/cxxshm/install/usr/lib/x86_64-linux-gnu/cmake/cxxshm/
+      - -Dcxxitimer_DIR=/root/parts/cxxitimer/install/usr/lib/x86_64-linux-gnu/cmake/cxxitimer/
+      - -Dcxxsemaphore_DIR=/root/parts/cxxsemaphore/install/usr/lib/x86_64-linux-gnu/cmake/cxxsemaphore/
+      - -Dcxxopts_DIR=/root/parts/cxxopts/install/usr/lib/cmake/cxxopts/
+      - -Dnlohmann_json_DIR=/root/parts/nlohmann_json/install/usr/share/cmake/nlohmann_json/
     build-attributes:
       - enable-patchelf
     stage:
       - usr/bin/stdin-to-modbus-shm
   
   modbus-tcp-client-shm:
-    source: https://github.com/NikolasK-source/modbus_tcp_client_shm.git
+    source: https://github.com/SHMModbus/modbus_tcp_client_shm.git
     source-type: git
-    source-tag: v1.5.3-snap
+    source-tag: v1.6.3
+    after:
+      - cxxshm
+      - cxxsemaphore
+      - nlohmann_json
+      - cxxopts
     plugin: cmake
     cmake-generator: Ninja
     cmake-parameters:
@@ -135,15 +273,27 @@ parts:
       - -DCLANG_FORMAT=OFF
       - -DCOMPILER_WARNINGS=OFF
       - -DCMAKE_INSTALL_PREFIX=/usr
+      - -Dcxxshm_DIR=/root/parts/cxxshm/install/usr/lib/x86_64-linux-gnu/cmake/cxxshm/
+      - -Dcxxitimer_DIR=/root/parts/cxxitimer/install/usr/lib/x86_64-linux-gnu/cmake/cxxitimer/
+      - -Dcxxsemaphore_DIR=/root/parts/cxxsemaphore/install/usr/lib/x86_64-linux-gnu/cmake/cxxsemaphore/
+      - -Dcxxopts_DIR=/root/parts/cxxopts/install/usr/lib/cmake/cxxopts/
+      - -Dnlohmann_json_DIR=/root/parts/nlohmann_json/install/usr/share/cmake/nlohmann_json/
     build-attributes:
       - enable-patchelf
     stage:
       - usr/bin/modbus-tcp-client-shm
+    stage-packages:
+      - libmodbus-dev
 
   modbus-rtu-client-shm:
-    source: https://github.com/NikolasK-source/modbus_rtu_client_shm.git
+    source: https://github.com/SHMModbus/modbus_rtu_client_shm.git
     source-type: git
-    source-tag: v0.3.0-snap
+    source-tag: v0.4.1
+    after:
+      - cxxshm
+      - cxxsemaphore
+      - nlohmann_json
+      - cxxopts
     plugin: cmake
     cmake-generator: Ninja
     cmake-parameters:
@@ -151,17 +301,29 @@ parts:
       - -DCLANG_FORMAT=OFF
       - -DCOMPILER_WARNINGS=OFF
       - -DCMAKE_INSTALL_PREFIX=/usr
+      - -Dcxxshm_DIR=/root/parts/cxxshm/install/usr/lib/x86_64-linux-gnu/cmake/cxxshm/
+      - -Dcxxitimer_DIR=/root/parts/cxxitimer/install/usr/lib/x86_64-linux-gnu/cmake/cxxitimer/
+      - -Dcxxsemaphore_DIR=/root/parts/cxxsemaphore/install/usr/lib/x86_64-linux-gnu/cmake/cxxsemaphore/
+      - -Dcxxopts_DIR=/root/parts/cxxopts/install/usr/lib/cmake/cxxopts/
+      - -Dnlohmann_json_DIR=/root/parts/nlohmann_json/install/usr/share/cmake/nlohmann_json/
     build-attributes:
       - enable-patchelf
     stage:
       - usr/bin/modbus-rtu-client-shm
+    stage-packages:
+      - libmodbus-dev
 
   signal-gen:
-    source: https://github.com/NikolasK-source/shm-modbus-signal-gen.git
+    source: https://github.com/SHMModbus/shm-modbus-signal-gen.git
     source-type: git
     source-tag: v1.0.2
+    after:
+      - cxxshm
+      - cxxsemaphore
+      - nlohmann_json
+      - cxxopts
+      - gui
     plugin: python
-    after: [gui]
     build-attributes:
       - enable-patchelf
     override-build: |
@@ -175,9 +337,14 @@ parts:
       - usr/bin/signal-gen
 
   gui:
-    source: https://github.com/NikolasK-source/shm_modbus_gui.git
+    source: https://github.com/SHMModbus/shm_modbus_gui.git
     source-type: git
-    source-tag: v1.0.2
+    source-tag: v2.1.0
+    after:
+      - cxxshm
+      - cxxsemaphore
+      - nlohmann_json
+      - cxxopts
     plugin: python
     stage-packages:
       - libgl1
@@ -188,12 +355,18 @@ parts:
       - libxcb-cursor0
       - qt6-base-dev
       - bsdextrautils
+      - libmodbus-dev
 
     
   wago-modbus-coupler-shm:
-    source: https://github.com/NikolasK-source/wago_modbus_coupler_shm.git
+    source: https://github.com/SHMModbus/wago_modbus_coupler_shm.git
     source-type: git
     source-tag: v1.1.1
+    after:
+      - cxxshm
+      - cxxsemaphore
+      - nlohmann_json
+      - cxxopts
     plugin: cmake
     cmake-generator: Ninja
     cmake-parameters:
@@ -201,6 +374,11 @@ parts:
       - -DCLANG_FORMAT=OFF
       - -DCOMPILER_WARNINGS=OFF
       - -DCMAKE_INSTALL_PREFIX=/usr
+      - -Dcxxshm_DIR=/root/parts/cxxshm/install/usr/lib/x86_64-linux-gnu/cmake/cxxshm/
+      - -Dcxxitimer_DIR=/root/parts/cxxitimer/install/usr/lib/x86_64-linux-gnu/cmake/cxxitimer/
+      - -Dcxxsemaphore_DIR=/root/parts/cxxsemaphore/install/usr/lib/x86_64-linux-gnu/cmake/cxxsemaphore/
+      - -Dcxxopts_DIR=/root/parts/cxxopts/install/usr/lib/cmake/cxxopts/
+      - -Dnlohmann_json_DIR=/root/parts/nlohmann_json/install/usr/share/cmake/nlohmann_json/
     build-attributes:
       - enable-patchelf
     stage:
