--- a/io.github.shmmodbus.desktop
+++ b/io.github.shmmodbus.desktop
@@ -3,7 +3,7 @@ Name=Shared Memory Modbus
 GenericName=Modbus Client
 Categories=Development
 Comment=Collection of applications to simulate a Modbus client
-Icon=network.koesling.shm-modbus
+Icon=io.github.shmmodbus
 Exec=shm-modbus --gui
 Keywords=shm;shared-memory;modbus;client
 Type=Application
