--- a/.github/workflows/build_flatpak.yml
+++ b/.github/workflows/build_flatpak.yml
@@ -14,5 +14,5 @@ jobs:
       name: "Build"
       with:
         bundle: shm-modbus.flatpak
-        manifest-path: io.github.shmmodbus.yml
+        manifest-path: io.github.shmmodbus.shm-modbus.yml
         cache-key: flatpak-builder-${{ github.sha }}
