--- a/io.github.shmmodbus.shm-modbus.desktop
+++ b/io.github.shmmodbus.shm-modbus.desktop
@@ -3,7 +3,7 @@ Name=Shared Memory Modbus
 GenericName=Modbus Client
 Categories=Development
 Comment=Collection of applications to simulate a Modbus client
-Icon=io.github.shmmodbus
+Icon=io.github.shmmodbus.shm-modbus
 Exec=shm-modbus --gui
 Keywords=shm;shared-memory;modbus;client
 Type=Application
