--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,6 +1,6 @@
 name: shm-modbus # you probably want to 'snapcraft register <name>'
 base: core22 # the base snap is the execution environment for this snap
-version: '2.1.2-1' # just for humans, typically '1.2+git' or '1.3.2'
+version: '2.1.2-2' # just for humans, typically '1.2+git' or '1.3.2'
 adopt-info: shm-modbus
 grade: stable # must be 'stable' to release into candidate/stable channels
 confinement: strict # use 'strict' once you have the right plugs and slots
@@ -176,9 +176,9 @@ parts:
       - -DCOMPILER_WARNINGS=OFF
       - -DCMAKE_INSTALL_PREFIX=/usr
       - -DENABLE_TEST=OFF
-      - -Dcxxshm_DIR=/root/parts/cxxshm/install/usr/lib/x86_64-linux-gnu/cmake/cxxshm/
-      - -Dcxxitimer_DIR=/root/parts/cxxitimer/install/usr/lib/x86_64-linux-gnu/cmake/cxxitimer/
-      - -Dcxxsemaphore_DIR=/root/parts/cxxsemaphore/install/usr/lib/x86_64-linux-gnu/cmake/cxxsemaphore/
+      - -Dcxxshm_DIR=/root/parts/cxxshm/install/usr/lib/${SNAP_ARCH}-linux-gnu/cmake/cxxshm/
+      - -Dcxxitimer_DIR=/root/parts/cxxitimer/install/usr/lib/${SNAP_ARCH}-linux-gnu/cmake/cxxitimer/
+      - -Dcxxsemaphore_DIR=/root/parts/cxxsemaphore/install/usr/lib/${SNAP_ARCH}-linux-gnu/cmake/cxxsemaphore/
       - -Dcxxopts_DIR=/root/parts/cxxopts/install/usr/lib/cmake/cxxopts/
       - -Dnlohmann_json_DIR=/root/parts/nlohmann_json/install/usr/share/cmake/nlohmann_json/
     build-attributes:
@@ -203,9 +203,9 @@ parts:
       - -DCOMPILER_WARNINGS=OFF
       - -DCMAKE_INSTALL_PREFIX=/usr
       - -DENABLE_TEST=OFF
-      - -Dcxxshm_DIR=/root/parts/cxxshm/install/usr/lib/x86_64-linux-gnu/cmake/cxxshm/
-      - -Dcxxitimer_DIR=/root/parts/cxxitimer/install/usr/lib/x86_64-linux-gnu/cmake/cxxitimer/
-      - -Dcxxsemaphore_DIR=/root/parts/cxxsemaphore/install/usr/lib/x86_64-linux-gnu/cmake/cxxsemaphore/
+      - -Dcxxshm_DIR=/root/parts/cxxshm/install/usr/lib/${SNAP_ARCH}-linux-gnu/cmake/cxxshm/
+      - -Dcxxitimer_DIR=/root/parts/cxxitimer/install/usr/lib/${SNAP_ARCH}-linux-gnu/cmake/cxxitimer/
+      - -Dcxxsemaphore_DIR=/root/parts/cxxsemaphore/install/usr/lib/${SNAP_ARCH}-linux-gnu/cmake/cxxsemaphore/
       - -Dcxxopts_DIR=/root/parts/cxxopts/install/usr/lib/cmake/cxxopts/
       - -Dnlohmann_json_DIR=/root/parts/nlohmann_json/install/usr/share/cmake/nlohmann_json/
     build-attributes:
@@ -231,9 +231,9 @@ parts:
       - -DCOMPILER_WARNINGS=OFF
       - -DCMAKE_INSTALL_PREFIX=/usr
       - -DENABLE_TEST=OFF
-      - -Dcxxshm_DIR=/root/parts/cxxshm/install/usr/lib/x86_64-linux-gnu/cmake/cxxshm/
-      - -Dcxxitimer_DIR=/root/parts/cxxitimer/install/usr/lib/x86_64-linux-gnu/cmake/cxxitimer/
-      - -Dcxxsemaphore_DIR=/root/parts/cxxsemaphore/install/usr/lib/x86_64-linux-gnu/cmake/cxxsemaphore/
+      - -Dcxxshm_DIR=/root/parts/cxxshm/install/usr/lib/${SNAP_ARCH}-linux-gnu/cmake/cxxshm/
+      - -Dcxxitimer_DIR=/root/parts/cxxitimer/install/usr/lib/${SNAP_ARCH}-linux-gnu/cmake/cxxitimer/
+      - -Dcxxsemaphore_DIR=/root/parts/cxxsemaphore/install/usr/lib/${SNAP_ARCH}-linux-gnu/cmake/cxxsemaphore/
       - -Dcxxopts_DIR=/root/parts/cxxopts/install/usr/lib/cmake/cxxopts/
       - -Dnlohmann_json_DIR=/root/parts/nlohmann_json/install/usr/share/cmake/nlohmann_json/
     build-attributes:
@@ -259,9 +259,9 @@ parts:
       - -DCOMPILER_WARNINGS=OFF
       - -DCMAKE_INSTALL_PREFIX=/usr
       - -DENABLE_TEST=OFF
-      - -Dcxxshm_DIR=/root/parts/cxxshm/install/usr/lib/x86_64-linux-gnu/cmake/cxxshm/
-      - -Dcxxitimer_DIR=/root/parts/cxxitimer/install/usr/lib/x86_64-linux-gnu/cmake/cxxitimer/
-      - -Dcxxsemaphore_DIR=/root/parts/cxxsemaphore/install/usr/lib/x86_64-linux-gnu/cmake/cxxsemaphore/
+      - -Dcxxshm_DIR=/root/parts/cxxshm/install/usr/lib/${SNAP_ARCH}-linux-gnu/cmake/cxxshm/
+      - -Dcxxitimer_DIR=/root/parts/cxxitimer/install/usr/lib/${SNAP_ARCH}-linux-gnu/cmake/cxxitimer/
+      - -Dcxxsemaphore_DIR=/root/parts/cxxsemaphore/install/usr/lib/${SNAP_ARCH}-linux-gnu/cmake/cxxsemaphore/
       - -Dcxxopts_DIR=/root/parts/cxxopts/install/usr/lib/cmake/cxxopts/
       - -Dnlohmann_json_DIR=/root/parts/nlohmann_json/install/usr/share/cmake/nlohmann_json/
     build-attributes:
@@ -281,9 +281,9 @@ parts:
       - -DCOMPILER_WARNINGS=OFF
       - -DCMAKE_INSTALL_PREFIX=/usr
       - -DENABLE_TEST=OFF
-      - -Dcxxshm_DIR=/root/parts/cxxshm/install/usr/lib/x86_64-linux-gnu/cmake/cxxshm/
-      - -Dcxxitimer_DIR=/root/parts/cxxitimer/install/usr/lib/x86_64-linux-gnu/cmake/cxxitimer/
-      - -Dcxxsemaphore_DIR=/root/parts/cxxsemaphore/install/usr/lib/x86_64-linux-gnu/cmake/cxxsemaphore/
+      - -Dcxxshm_DIR=/root/parts/cxxshm/install/usr/lib/${SNAP_ARCH}-linux-gnu/cmake/cxxshm/
+      - -Dcxxitimer_DIR=/root/parts/cxxitimer/install/usr/lib/${SNAP_ARCH}-linux-gnu/cmake/cxxitimer/
+      - -Dcxxsemaphore_DIR=/root/parts/cxxsemaphore/install/usr/lib/${SNAP_ARCH}-linux-gnu/cmake/cxxsemaphore/
       - -Dcxxopts_DIR=/root/parts/cxxopts/install/usr/lib/cmake/cxxopts/
       - -Dnlohmann_json_DIR=/root/parts/nlohmann_json/install/usr/share/cmake/nlohmann_json/
     build-attributes:
@@ -308,9 +308,9 @@ parts:
       - -DCOMPILER_WARNINGS=OFF
       - -DCMAKE_INSTALL_PREFIX=/usr
       - -DENABLE_TEST=OFF
-      - -Dcxxshm_DIR=/root/parts/cxxshm/install/usr/lib/x86_64-linux-gnu/cmake/cxxshm/
-      - -Dcxxitimer_DIR=/root/parts/cxxitimer/install/usr/lib/x86_64-linux-gnu/cmake/cxxitimer/
-      - -Dcxxsemaphore_DIR=/root/parts/cxxsemaphore/install/usr/lib/x86_64-linux-gnu/cmake/cxxsemaphore/
+      - -Dcxxshm_DIR=/root/parts/cxxshm/install/usr/lib/${SNAP_ARCH}-linux-gnu/cmake/cxxshm/
+      - -Dcxxitimer_DIR=/root/parts/cxxitimer/install/usr/lib/${SNAP_ARCH}-linux-gnu/cmake/cxxitimer/
+      - -Dcxxsemaphore_DIR=/root/parts/cxxsemaphore/install/usr/lib/${SNAP_ARCH}-linux-gnu/cmake/cxxsemaphore/
       - -Dcxxopts_DIR=/root/parts/cxxopts/install/usr/lib/cmake/cxxopts/
       - -Dnlohmann_json_DIR=/root/parts/nlohmann_json/install/usr/share/cmake/nlohmann_json/
     build-attributes:
@@ -337,9 +337,9 @@ parts:
       - -DCOMPILER_WARNINGS=OFF
       - -DCMAKE_INSTALL_PREFIX=/usr
       - -DENABLE_TEST=OFF
-      - -Dcxxshm_DIR=/root/parts/cxxshm/install/usr/lib/x86_64-linux-gnu/cmake/cxxshm/
-      - -Dcxxitimer_DIR=/root/parts/cxxitimer/install/usr/lib/x86_64-linux-gnu/cmake/cxxitimer/
-      - -Dcxxsemaphore_DIR=/root/parts/cxxsemaphore/install/usr/lib/x86_64-linux-gnu/cmake/cxxsemaphore/
+      - -Dcxxshm_DIR=/root/parts/cxxshm/install/usr/lib/${SNAP_ARCH}-linux-gnu/cmake/cxxshm/
+      - -Dcxxitimer_DIR=/root/parts/cxxitimer/install/usr/lib/${SNAP_ARCH}-linux-gnu/cmake/cxxitimer/
+      - -Dcxxsemaphore_DIR=/root/parts/cxxsemaphore/install/usr/lib/${SNAP_ARCH}-linux-gnu/cmake/cxxsemaphore/
       - -Dcxxopts_DIR=/root/parts/cxxopts/install/usr/lib/cmake/cxxopts/
       - -Dnlohmann_json_DIR=/root/parts/nlohmann_json/install/usr/share/cmake/nlohmann_json/
     build-attributes:
@@ -415,9 +415,9 @@ parts:
       - -DCOMPILER_WARNINGS=OFF
       - -DCMAKE_INSTALL_PREFIX=/usr
       - -DENABLE_TEST=OFF
-      - -Dcxxshm_DIR=/root/parts/cxxshm/install/usr/lib/x86_64-linux-gnu/cmake/cxxshm/
-      - -Dcxxitimer_DIR=/root/parts/cxxitimer/install/usr/lib/x86_64-linux-gnu/cmake/cxxitimer/
-      - -Dcxxsemaphore_DIR=/root/parts/cxxsemaphore/install/usr/lib/x86_64-linux-gnu/cmake/cxxsemaphore/
+      - -Dcxxshm_DIR=/root/parts/cxxshm/install/usr/lib/${SNAP_ARCH}-linux-gnu/cmake/cxxshm/
+      - -Dcxxitimer_DIR=/root/parts/cxxitimer/install/usr/lib/${SNAP_ARCH}-linux-gnu/cmake/cxxitimer/
+      - -Dcxxsemaphore_DIR=/root/parts/cxxsemaphore/install/usr/lib/${SNAP_ARCH}-linux-gnu/cmake/cxxsemaphore/
       - -Dcxxopts_DIR=/root/parts/cxxopts/install/usr/lib/cmake/cxxopts/
       - -Dnlohmann_json_DIR=/root/parts/nlohmann_json/install/usr/share/cmake/nlohmann_json/
     build-attributes:
